{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 448,
  "lineage": "c7cbdd3b-499c-4dd9-5a70-8b6f8025dd6f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/devops-practice-411411/zones/us-central1-c/instanceGroups/l7-xlb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-03-25T00:57:04.860-07:00",
            "custom_request_headers": [
              "X-Client-Geo-Location: {client_region_subdivision}, {client_city}"
            ],
            "custom_response_headers": [
              "X-Cache-Hit: {cdn_cache_status}"
            ],
            "enable_cdn": true,
            "fingerprint": "URkUf-fLkOI=",
            "generated_id": 5288179534270337215,
            "health_checks": [
              "projects/devops-practice-411411/global/healthChecks/l7-xlb-hc"
            ],
            "id": "projects/devops-practice-411411/global/backendServices/l7-xlb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-backend-service",
            "port_name": "my-port",
            "project": "devops-practice-411411",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/devops-practice-411411/global/securityPolicies/my-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-practice-411411/global/backendServices/l7-xlb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.102.237.188",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-25T00:56:09.364-07:00",
            "id": "projects/devops-practice-411411/global/addresses/l7-xlb-static-ip",
            "name": "l7-xlb-static-ip",
            "prefix_length": 0,
            "project": "devops-practice-411411",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-practice-411411/global/addresses/l7-xlb-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "_x0ow68oORg=",
            "id": "projects/devops-practice-411411/global/securityPolicies/terra-policy",
            "name": "terra-policy",
            "project": "devops-practice-411411",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block traffic from the United States",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "origin.region_code == 'US'"
                      }
                    ],
                    "versioned_expr": ""
                  }
                ],
                "preview": false,
                "priority": 100,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-practice-411411/global/securityPolicies/terra-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-25T00:57:53.760-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/devops-practice-411411/global/targetHttpProxies/l7-xlb-target-http-proxy",
            "name": "l7-xlb-target-http-proxy",
            "project": "devops-practice-411411",
            "proxy_bind": false,
            "proxy_id": 6098495577894195310,
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-practice-411411/global/targetHttpProxies/l7-xlb-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/devops-practice-411411/global/urlMaps/l7-xlb-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-25T00:57:41.079-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/devops-practice-411411/global/backendServices/l7-xlb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "7V3OPcVxOX0=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/devops-practice-411411/global/urlMaps/l7-xlb-url-map",
            "map_id": 584616954131419290,
            "name": "l7-xlb-url-map",
            "path_matcher": [],
            "project": "devops-practice-411411",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-practice-411411/global/urlMaps/l7-xlb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default"
          ]
        }
      ]
    }
  ]
}